# chess-ai

./: .clang-format  .gitignore  3a  CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: Application.cpp.8D88DF30A256E1E7.idx  Application.hpp.F9DC0A767A5A8637.idx  Bishop.hpp.92F87050979266EF.idx  BitUtility.hpp.DE040E8186C0676A.idx  Board.cpp.30DA617C3A2AFF75.idx  Board.cpp.69020DA4F88B5C7D.idx  Board.hpp.076E2DCE45DF50EF.idx  Board.hpp.2BE3115CD6787F34.idx  BoardUtility.hpp.80C761EA67E0C6A5.idx  Castle.hpp.112E2B810FF5B5B6.idx  Chess.cpp.6B69FA5B240F699F.idx  Chess.hpp.9B52507DA50619C4.idx  Colour.hpp.1CF1024FB5978BEF.idx  Engine.cpp.3DC4E3AAEDD6F360.idx  Engine.hpp.FA587A28D8CFCC81.idx  King.hpp.BA83175D75D8E0CA.idx  Knight.hpp.E617ED95CC20A65D.idx  Material.hpp.42459CBFC400D896.idx  Move.hpp.97976CA4291F462F.idx  Pawn.hpp.96C0197D9FACE5AE.idx  Piece.hpp.C4B2C842C2E8791D.idx  Position.hpp.201596B25F423C8E.idx  Queen.hpp.F22CFF421EF539E8.idx  RandomUtility.cpp.51A1D193EECEE25B.idx  RandomUtility.hpp.49BC67B5C47F71B2.idx  Rook.hpp.8C010B09AA101FEC.idx  Square.cpp.AA165B5271BF85E2.idx  Square.hpp.2C9F34513A9C66B8.idx  Square.hpp.AA99FDD4EF08B1AF.idx  StringUtility.cpp.FB5004AECE3D4E0E.idx  StringUtility.hpp.74519BE30FB8873C.idx  Window.cpp.615E77FD73531858.idx  Window.hpp.28ECC0729066109F.idx  Zobrist.cpp.CA6ABBD976C6A0DA.idx  main.cpp.792C8039E317457E.idx
include/application/: Application.hpp
include/application/gui/: Board.hpp  Chess.hpp  Piece.hpp  Promotion.hpp  Square.hpp  Window.hpp
include/compiler/: compiler.hpp
include/engine/: Engine.hpp  TempEngine.hpp
include/engine/board/: Board.hpp  (+5 more)
include/logger/: Entry.hpp  Logger.hpp  LoggerMacros.hpp
include/sound/: SoundBuffer.hpp  SoundPlayer.hpp  SoundSource.hpp
include/utility/: AttackUtility.hpp  BitUtility.hpp  BoardUtility.hpp  ColourUtility.hpp  DatetimeUtility.hpp  FileUtility.hpp  RandomUtility.hpp  StringUtility.hpp
scripts/: install.sh  profile.sh  run.sh
src/: main.cpp
src/application/: Application.cpp
src/engine/: Engine.cpp  TempEngine.cpp
src/hash/: Zobrist.cpp
src/logger/: Entry.cpp  Logger.cpp
src/sound/: SoundBuffer.cpp  SoundPlayer.cpp  SoundSource.cpp
src/utility/: BitUtility.cpp  ColourUtility.cpp  DatetimeUtility.cpp  FileUtility.cpp  RandomUtility.cpp  StringUtility.cpp
(+41 files in other folders)
